test/mutation_analysis/s0228_summary_ranges/hafis/ablation_o3_full/mutants/6/result.txt
./test/mutation_analysis/s0228_summary_ranges/hafis/ablation_o3_full/mutants/6/Solution.java:27: error: unreachable statement
        for (int i = 1; false; i++) {
                                    ^
1 error
